working on adding pieces to board visibily - encountered bug

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -60,7 +60,7 @@
     border:none;
 }
 
-.piece {
+.piece-element {
     width:75px;
     height:75px;
     position:absolute;
